# carbon_footprint

./: .gitignore  01_baseline_verify_output.py  01_verify_output.py  02_other_verify_output.py  03_02_pilot_cv_analysis.ipynb  03_03_sam_size_det.ipynb  03_pilot_study.py  04_power_analysis.py  05_result_analysis.ipynb  06_welch.ipynb  README.md  _debug_script.py  benchmark_results.csv  claude.md  detailed.py  environment.md  implementations_tree.txt  joules_wastes.txt  output.txt  pilot_study.py  power_analysis.py  requirements.txt  run_output.txt  test.py  test_harness.py  verifier_out.txt  verify_outputs_report.json  verify_runtimes_report.json  workflow.py
.claude/: settings.local.json
docs/: notes.md
implementations/: benchmark_results.csv  benchmark_runner.py  implementations_tree.txt
implementations/rust/binary_search/: Cargo.toml
implementations/rust/binary_search/large/: binary_search_large.rs
implementations/rust/binary_search/mid/: binary_search_mid.rs
implementations/rust/binary_search/small/: binary_search_small.rs
implementations/rust/binary_search/src/: main.rs
implementations/rust/matrix_multiplication/: Cargo.toml
implementations/rust/matrix_multiplication/large/: matrix_multiplication_large.rs
implementations/rust/matrix_multiplication/mid/: matrix_multiplication_mid.rs
implementations/rust/matrix_multiplication/small/: matrix_multiplication_small.rs
implementations/rust/matrix_multiplication/src/: main.rs
logs/: runs_20260401T211255.jsonl  runs_20260401T211813.jsonl  runs_20260403T174001.jsonl
paper/: .latexmkrc  main.bib  (+9 more)
(+203 files in other folders)
